Fixed grid gap spacing

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -11,8 +11,8 @@
   border-radius: 1rem;
   padding: 8px 5px;
   margin-right: 0rem;
+  border-top: 2px solid #525252;
   background-color: #333333;
-  border: #333333 2px solid;
   box-shadow: 0px 7px 5px #0000005c;
 }
 
@@ -98,6 +98,17 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+@media (min-width: 1024px) {
+  .search-bar {
+    width: 30%;
+    margin-right: 1rem;
+  }
+
+  .autocomplete-list {
+    width: 21rem;
+  }
 }
 
 @media (min-width: 50em) {
